Updated .gitignore for a couple local scripts I wrote

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Jarvis specific files/directories to ignore
 Prototyping/
 botsettings.py
+rename_files.py
 jarvis.db
 
 # Byte-compiled / optimized / DLL files
